--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dj-database-url==0.5.0
 Django==2.2.2
-djangorestframework==3.9.4
 gunicorn==19.9.0
+psycopg2==2.8.3
 PyGithub==1.43.7
 python-decouple==3.1
+whitenoise==4.1.2
+
