--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+bokeh==1.2.0
 dj-database-url==0.5.0
 Django==2.2.2
+django-filter==2.1.0
 djangorestframework==3.9.4
 gunicorn==19.9.0
+Jinja2==2.10.1
+Markdown==3.1.1
+numpy==1.16.4
+pandas==0.24.2
 psycopg2==2.8.3
 PyGithub==1.43.7
 python-decouple==3.1
